# CG_BOAT_PROJECT

./: CMakeLists.txt  README.md  build.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: background_fragment.glsl  fragment.glsl  sun_fragment.glsl  sun_vertex.glsl  water_fragment.glsl  water_vertex.glsl
src/: background.h  camera.h  hud.h  main.cpp  mesh.h  shader.h  sun.h  text_renderer.h
